[gd_scene load_steps=14 format=2]

[ext_resource path="res://UI/PlayerContainer.gd" type="Script" id=1]
[ext_resource path="res://UI/Fonts/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://UI/trading_ui/buy_and_sell_slots.png" type="Texture" id=3]
[ext_resource path="res://UI/trading_ui/single_bg_inv.png" type="Texture" id=4]
[ext_resource path="res://UI/trading_ui/button_with_chain.png" type="Texture" id=5]
[ext_resource path="res://UI/trading_ui/empty_slot.png" type="Texture" id=6]
[ext_resource path="res://Inventory/Slot.gd" type="Script" id=7]
[ext_resource path="res://UI/BuyContainer.gd" type="Script" id=8]
[ext_resource path="res://UI/SellContainer.gd" type="Script" id=9]
[ext_resource path="res://UI/TradeUI.gd" type="Script" id=10]
[ext_resource path="res://UI/SellerContainer.gd" type="Script" id=11]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 34, 34 )

[sub_resource type="DynamicFont" id=2]
size = 12
font_data = ExtResource( 2 )

[node name="TradeUI" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -180.0
margin_right = 320.0
margin_bottom = 180.0
script = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_top = -1.0
margin_right = 640.0
margin_bottom = 359.0
texture = ExtResource( 3 )

[node name="SellerInvBG" type="TextureRect" parent="."]
margin_left = 32.0
margin_top = 32.0
margin_right = 224.0
margin_bottom = 272.0
texture = ExtResource( 4 )

[node name="PlayerInvBG" type="TextureRect" parent="."]
margin_left = 416.0
margin_top = 33.0
margin_right = 608.0
margin_bottom = 273.0
texture = ExtResource( 4 )

[node name="SellerContainer" type="ScrollContainer" parent="."]
margin_left = 54.0
margin_top = 91.0
margin_right = 194.0
margin_bottom = 258.0
scroll_horizontal_enabled = false
script = ExtResource( 11 )

[node name="SellerSlots" type="GridContainer" parent="SellerContainer"]
margin_right = 140.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( 427, 66 )
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 4

[node name="Slot1" type="Panel" parent="SellerContainer/SellerSlots"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot2" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot3" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot4" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot5" type="Panel" parent="SellerContainer/SellerSlots"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot6" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot7" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot8" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot9" type="Panel" parent="SellerContainer/SellerSlots"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot10" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot11" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot12" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 108.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot13" type="Panel" parent="SellerContainer/SellerSlots"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot14" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot15" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 72.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot16" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 108.0
margin_top = 108.0
margin_right = 140.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot17" type="Panel" parent="SellerContainer/SellerSlots"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot18" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 36.0
margin_top = 144.0
margin_right = 68.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot19" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 72.0
margin_top = 144.0
margin_right = 104.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot20" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 108.0
margin_top = 144.0
margin_right = 140.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot21" type="Panel" parent="SellerContainer/SellerSlots"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot22" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 36.0
margin_top = 180.0
margin_right = 68.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot23" type="Panel" parent="SellerContainer/SellerSlots"]
margin_left = 72.0
margin_top = 180.0
margin_right = 104.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="PlayerContainer" type="ScrollContainer" parent="."]
margin_left = 436.0
margin_top = 92.0
margin_right = 588.0
margin_bottom = 259.0
scroll_horizontal_enabled = false
script = ExtResource( 1 )

[node name="PlayerSlots" type="GridContainer" parent="PlayerContainer"]
margin_right = 140.0
margin_bottom = 212.0
rect_pivot_offset = Vector2( 427, 66 )
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 4

[node name="Slot1" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot2" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot3" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot4" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 108.0
margin_right = 140.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot5" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot6" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot7" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot8" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 108.0
margin_top = 36.0
margin_right = 140.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot9" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot10" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot11" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot12" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 108.0
margin_top = 72.0
margin_right = 140.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot13" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot14" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot15" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 72.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot16" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 108.0
margin_top = 108.0
margin_right = 140.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot17" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot18" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 36.0
margin_top = 144.0
margin_right = 68.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot19" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 72.0
margin_top = 144.0
margin_right = 104.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot20" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 108.0
margin_top = 144.0
margin_right = 140.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot21" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot22" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 36.0
margin_top = 180.0
margin_right = 68.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot23" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 72.0
margin_top = 180.0
margin_right = 104.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot24" type="Panel" parent="PlayerContainer/PlayerSlots"]
margin_left = 108.0
margin_top = 180.0
margin_right = 140.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="BuyContainer" type="ScrollContainer" parent="."]
margin_left = 269.0
margin_top = 93.0
margin_right = 386.0
margin_bottom = 162.0
scroll_horizontal_enabled = false
script = ExtResource( 8 )
__meta__ = {
"_edit_group_": true
}

[node name="BuySlots" type="GridContainer" parent="BuyContainer"]
margin_right = 104.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 427, 66 )
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 3

[node name="Slot1" type="Panel" parent="BuyContainer/BuySlots"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot2" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot3" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot4" type="Panel" parent="BuyContainer/BuySlots"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot5" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot6" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot7" type="Panel" parent="BuyContainer/BuySlots"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot8" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot9" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot10" type="Panel" parent="BuyContainer/BuySlots"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot11" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot12" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot13" type="Panel" parent="BuyContainer/BuySlots"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot14" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_top = 144.0
margin_right = 68.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot15" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_top = 144.0
margin_right = 104.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot16" type="Panel" parent="BuyContainer/BuySlots"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot17" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_top = 180.0
margin_right = 68.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot18" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_top = 180.0
margin_right = 104.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot19" type="Panel" parent="BuyContainer/BuySlots"]
margin_top = 216.0
margin_right = 32.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot20" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_top = 216.0
margin_right = 68.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot21" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_top = 216.0
margin_right = 104.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot22" type="Panel" parent="BuyContainer/BuySlots"]
margin_top = 252.0
margin_right = 32.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot23" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 36.0
margin_top = 252.0
margin_right = 68.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot24" type="Panel" parent="BuyContainer/BuySlots"]
margin_left = 72.0
margin_top = 252.0
margin_right = 104.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="SellContainer" type="ScrollContainer" parent="."]
margin_left = 268.0
margin_top = 204.0
margin_right = 385.0
margin_bottom = 273.0
scroll_horizontal_enabled = false
script = ExtResource( 9 )
__meta__ = {
"_edit_group_": true
}

[node name="SellSlots" type="GridContainer" parent="SellContainer"]
margin_right = 104.0
margin_bottom = 284.0
rect_pivot_offset = Vector2( 427, 66 )
custom_constants/vseparation = 4
custom_constants/hseparation = 4
columns = 3

[node name="Slot1" type="Panel" parent="SellContainer/SellSlots"]
margin_right = 32.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot2" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_right = 68.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot3" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_right = 104.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot4" type="Panel" parent="SellContainer/SellSlots"]
margin_top = 36.0
margin_right = 32.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot5" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_top = 36.0
margin_right = 68.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot6" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_top = 36.0
margin_right = 104.0
margin_bottom = 68.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot7" type="Panel" parent="SellContainer/SellSlots"]
margin_top = 72.0
margin_right = 32.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot8" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_top = 72.0
margin_right = 68.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot9" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_top = 72.0
margin_right = 104.0
margin_bottom = 104.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot10" type="Panel" parent="SellContainer/SellSlots"]
margin_top = 108.0
margin_right = 32.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot11" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_top = 108.0
margin_right = 68.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot12" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_top = 108.0
margin_right = 104.0
margin_bottom = 140.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot13" type="Panel" parent="SellContainer/SellSlots"]
margin_top = 144.0
margin_right = 32.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot14" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_top = 144.0
margin_right = 68.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot15" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_top = 144.0
margin_right = 104.0
margin_bottom = 176.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot16" type="Panel" parent="SellContainer/SellSlots"]
margin_top = 180.0
margin_right = 32.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot17" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_top = 180.0
margin_right = 68.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot18" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_top = 180.0
margin_right = 104.0
margin_bottom = 212.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot19" type="Panel" parent="SellContainer/SellSlots"]
margin_top = 216.0
margin_right = 32.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot20" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_top = 216.0
margin_right = 68.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot21" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_top = 216.0
margin_right = 104.0
margin_bottom = 248.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot22" type="Panel" parent="SellContainer/SellSlots"]
margin_top = 252.0
margin_right = 32.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot23" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 36.0
margin_top = 252.0
margin_right = 68.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="Slot24" type="Panel" parent="SellContainer/SellSlots"]
margin_left = 72.0
margin_top = 252.0
margin_right = 104.0
margin_bottom = 284.0
rect_min_size = Vector2( 32, 32 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 7 )

[node name="ConfirmButton" type="TextureButton" parent="."]
margin_left = 274.0
margin_top = 281.0
margin_right = 370.0
margin_bottom = 329.0
texture_normal = ExtResource( 5 )

[node name="YouLabel" type="Label" parent="."]
margin_left = 490.0
margin_top = 42.0
margin_right = 538.0
margin_bottom = 58.0
custom_fonts/font = SubResource( 2 )
text = "You"

[node name="BuyLabel" type="Label" parent="."]
margin_left = 299.0
margin_top = 65.0
margin_right = 347.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "Buy"

[node name="SellLabel" type="Label" parent="."]
margin_left = 298.0
margin_top = 176.0
margin_right = 346.0
margin_bottom = 192.0
custom_fonts/font = SubResource( 2 )
text = "Sell"

[node name="SellerLabel" type="Label" parent="."]
margin_left = 89.0
margin_top = 41.0
margin_right = 185.0
margin_bottom = 57.0
custom_fonts/font = SubResource( 2 )
text = "Seller"

[node name="ConfirmLabel" type="Label" parent="."]
margin_left = 279.0
margin_top = 305.0
margin_right = 375.0
margin_bottom = 321.0
custom_fonts/font = SubResource( 2 )
text = "Confirm"

[node name="TotalLabel" type="Label" parent="."]
margin_left = 272.0
margin_top = 334.0
margin_right = 368.0
margin_bottom = 350.0
custom_fonts/font = SubResource( 2 )
text = "Total"

[node name="PlayerGoldLabel" type="Label" parent="."]
margin_left = 478.0
margin_top = 277.0
margin_right = 598.0
margin_bottom = 293.0
custom_fonts/font = SubResource( 2 )
text = "PlayerGold"

[connection signal="button_down" from="ConfirmButton" to="BuyContainer" method="_on_ConfirmButton_button_down"]
[connection signal="button_down" from="ConfirmButton" to="SellContainer" method="_on_ConfirmButton_button_down"]
